Fixed spacing

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -124,6 +124,7 @@ a { text-decoration: none; }
 }
 .splash-headline--keyword {
 	letter-spacing: 1rem;
+    margin-left: 1rem;
 }
 
 .splash-intro {
